--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> Introduction to Front-end-development </h1>
-<p> New paragraph </ph>
-<p> A front-end developer architects and develops client part of websites and applications using web technologies
+
+<p> A front-end developer architects and develops client part of websites and applications using web technologies(languages):</p>
 <u1>
 	<li style="color:red;">HTML</li>
 	<l1 style="color:green;">CSS</li>
