new list item added

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 	<li style="color:red;">HTML</li>
 	<l1 style="color:green;">CSS</li>
 	<li style="color:blue;">JavaScript<l1>
+	<li>PHP</li>
 	</u1>
