--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <u1>
 	<li style="color:red;">HTML</li>
 	<l1 style="color:green;">CSS</li>
-	<li style="color:blue;">JavaScript<l1>
+	<li style="color:blue;">JavaScript</li>
 	<li>PHP</li>
 	</u1>
