--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p> A front-end developer architects and develops client part of websites and applications using web technologies(languages):</p>
 <u1>
 	<li style="color:red;">HTML</li>
-	<l1 style="color:green;">CSS</li>
+	<li style="color:green;">CSS</li>
 	<li style="color:blue;">JavaScript</li>
 	<li>PHP</li>
 	</u1>
